--- a/app/src/main/res/layout/gen_review_fragment.xml
+++ b/app/src/main/res/layout/gen_review_fragment.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="8sp"
         android:orientation="vertical">
 
         <ProgressBar
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/tvWalletLabel"
-            android:layout_width="0dp"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/generate_wallet_label"
@@ -36,7 +36,7 @@
 
         <TextView
             android:id="@+id/tvWalletPasswordLabel"
-            android:layout_width="0dp"
+            android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/generate_password_label"
