--- a/app/src/main/res/layout/wallet_activity.xml
+++ b/app/src/main/res/layout/wallet_activity.xml
@@ -14,6 +14,7 @@
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_container"
+        android:layout_margin="4sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
