--- a/app/src/main/res/layout/wallet_fragment.xml
+++ b/app/src/main/res/layout/wallet_fragment.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00000000.000000000000"
-                android:textColor="@color/moneroOrange"
+                android:textColor="@color/tx_green"
                 android:textSize="24sp" />
 
             <TextView
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4sp"
                 android:text="@string/label_xmr"
-                android:textColor="@color/moneroOrange"
+                android:textColor="@color/tx_green"
                 android:textSize="24sp" />
         </LinearLayout>
 
