--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
 
     <color name="tx_green">#36b05b</color>
     <color name="tx_red">#ff4f41</color>
-    <color name="tx_pending">#FF4081</color>
+    <color name="tx_pending">#4835b0</color>
+    <color name="tx_failed">#d000ff</color>
 
     <color name="moneroOrange">#fa6600</color>
     <color name="white">#ffffff</color>
