--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -1,96 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
-    app:cardBackgroundColor="@color/main_background"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp">
+    android:layout_margin="1sp"
+    app:cardBackgroundColor="@color/main_background">
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8sp"
+        android:layout_marginTop="8sp"
+        tools:layout_editor_absoluteX="0sp"
+        tools:layout_editor_absoluteY="0sp">
+
+        <TextView
+            android:id="@+id/tx_amount"
+            android:layout_width="60sp"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp">
+            android:gravity="end"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:text="9999999"
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tx_amount"
-                android:gravity="end"
-                android:layout_width="70sp"
-                android:layout_height="wrap_content"
-                android:text="99999999"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+        <TextView
+            android:id="@+id/tx_amount_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:text="."
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
+            app:layout_constraintLeft_toRightOf="@+id/tx_amount"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tx_amount_point"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="."
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@+id/tx_amount"
-                android:layout_marginLeft="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+        <TextView
+            android:id="@+id/tx_amount_decimal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:text="99999"
+            android:textColor="@android:color/holo_red_light"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
+            app:layout_constraintLeft_toRightOf="@+id/tx_amount_point"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tx_amount_decimal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="999999999999"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toRightOf="@+id/tx_amount_point"
-                android:layout_marginLeft="0dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+        <TextView
+            android:id="@+id/tx_paymentid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8sp"
+            android:textSize="13sp"
+            android:text="0123456789abcdef"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
+            app:layout_constraintRight_toLeftOf="@+id/tx_datetime"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tx_date"
-                android:textColor="@android:color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:text="2017-05-22"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/tx_time"
-                android:layout_marginRight="8dp"/>
+        <TextView
+            android:id="@+id/tx_datetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:text="2017-05-22 21:32"
+            android:textColor="@android:color/black"
+            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tx_time"
-                android:textColor="@android:color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:text="21:32:11"
-                app:layout_constraintRight_toLeftOf="parent"
-                android:layout_marginRight="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+    </android.support.constraint.ConstraintLayout>
 
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView>
