--- a/app/src/main/res/layout/send_fragment.xml
+++ b/app/src/main/res/layout/send_fragment.xml
@@ -16,7 +16,7 @@
 
             <Spinner
                 android:id="@+id/sMixin"
-                android:layout_width="0dp"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:entries="@array/mixin"
@@ -24,7 +24,7 @@
 
             <Spinner
                 android:id="@+id/sPriority"
-                android:layout_width="0dp"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:entries="@array/priority"
@@ -32,25 +32,49 @@
 
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/etAddress"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/send_address_hint"
-            android:imeOptions="actionNext"
-            android:inputType="textMultiLine"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="4sp"
+            android:layout_marginTop="4sp"
+            android:weightSum="10">
+
+            <EditText
+                android:id="@+id/etAddress"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_weight="8"
+                android:hint="@string/send_address_hint"
+                android:imeOptions="actionNext"
+                android:inputType="textMultiLine"
+                android:textAlignment="center"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/bAddress"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:minHeight="36sp"
+                android:layout_weight="2"
+                android:background="@color/colorPrimary"
+                android:enabled="true"
+                android:text="@string/send_qr_hint"
+                android:textSize="12sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="4sp"
+            android:layout_marginTop="4sp"
             android:weightSum="10">
 
             <EditText
                 android:id="@+id/etPaymentId"
-                android:layout_width="0dp"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:hint="@string/send_paymentid_hint"
@@ -61,10 +85,10 @@
 
             <Button
                 android:id="@+id/bPaymentId"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:minHeight="36sp"
                 android:layout_weight="2"
                 android:background="@color/colorPrimary"
                 android:enabled="true"
@@ -76,11 +100,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="4sp"
+            android:layout_marginTop="4sp"
             android:weightSum="10">
 
             <EditText
                 android:id="@+id/etAmount"
-                android:layout_width="0dp"
+                android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:hint="@string/send_amount_hint"
@@ -91,10 +117,8 @@
 
             <Button
                 android:id="@+id/bSweep"
-                android:layout_width="0dp"
+                android:layout_width="0sp"
                 android:layout_height="match_parent"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_weight="2"
                 android:background="@color/colorPrimary"
                 android:enabled="true"
@@ -106,8 +130,9 @@
             android:id="@+id/bPrepareSend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4sp"
+            android:layout_marginTop="4sp"
+            android:minHeight="36sp"
             android:background="@color/colorPrimary"
             android:enabled="false"
             android:text="@string/send_prepare_hint" />
@@ -124,17 +149,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_marginBottom="4sp"
+            android:layout_marginTop="4sp"
             android:visibility="gone">
 
             <Button
                 android:id="@+id/bDispose"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:minHeight="36sp"
+                android:layout_marginBottom="4sp"
                 android:background="@color/colorPrimary"
                 android:text="@string/send_dispose_hint" />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -144,9 +170,9 @@
 
                 <TextView
                     android:id="@+id/tvTxAmountLabel"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginRight="8sp"
                     android:layout_weight="1"
                     android:text="@string/send_amount_label"
                     android:textAlignment="textEnd"
@@ -155,9 +181,9 @@
 
                 <TextView
                     android:id="@+id/tvTxAmount"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="8sp"
                     android:layout_weight="2"
                     android:textAlignment="textEnd"
                     android:textSize="20sp" />
@@ -171,9 +197,9 @@
 
                 <TextView
                     android:id="@+id/tvTxFeeLabel"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginRight="4sp"
                     android:layout_weight="1"
                     android:text="@string/send_fee_label"
                     android:textAlignment="textEnd"
@@ -182,9 +208,9 @@
 
                 <TextView
                     android:id="@+id/tvTxFee"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="8sp"
                     android:layout_weight="2"
                     android:textAlignment="textEnd"
                     android:textSize="20sp" />
@@ -198,9 +224,9 @@
 
                 <TextView
                     android:id="@+id/tvTxDustLabel"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
+                    android:layout_marginRight="8sp"
                     android:layout_weight="1"
                     android:text="@string/send_dust_label"
                     android:textAlignment="textEnd"
@@ -209,9 +235,9 @@
 
                 <TextView
                     android:id="@+id/tvTxDust"
-                    android:layout_width="0dp"
+                    android:layout_width="0sp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="8sp"
                     android:layout_weight="2"
                     android:textAlignment="textEnd"
                     android:textSize="20sp" />
@@ -221,7 +247,7 @@
                 android:id="@+id/etNotes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4sp"
                 android:hint="@string/send_notes_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
@@ -232,8 +258,9 @@
                 android:id="@+id/bSend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4sp"
+                android:layout_marginTop="4sp"
+                android:minHeight="36sp"
                 android:background="@color/colorPrimary"
                 android:text="@string/send_send_hint" />
 
@@ -241,8 +268,8 @@
                 android:id="@+id/bReallySend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4sp"
+                android:layout_marginTop="4sp"
                 android:background="@color/moneroOrange"
                 android:text="@string/send_really_send_hint"
                 android:visibility="gone" />
