--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -3,14 +3,24 @@
 
     <item
         android:id="@+id/action_info"
+        android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/menu_info" />
 
     <item
         android:id="@+id/action_receive"
+        android:icon="@drawable/ic_monero_qr_24dp"
         android:title="@string/menu_receive" />
 
     <item
         android:id="@+id/action_rename"
         android:title="@string/menu_rename" />
+
+    <item
+        android:id="@+id/action_backup"
+        android:title="@string/menu_backup" />
+
+    <item
+        android:id="@+id/action_archive"
+        android:title="@string/menu_archive" />
 
 </menu>
