--- a/app/src/main/res/layout/prompt_password.xml
+++ b/app/src/main/res/layout/prompt_password.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/tvPasswordLabel"
+        style="@style/MoneroLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:labelFor="@+id/etPassword"
@@ -16,6 +17,7 @@
 
     <EditText
         android:id="@+id/etPassword"
+        style="@style/MoneroEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="normal"
