--- a/app/src/main/res/layout/gen_fragment.xml
+++ b/app/src/main/res/layout/gen_fragment.xml
@@ -12,6 +12,7 @@
 
         <EditText
             android:id="@+id/etWalletName"
+            style="@style/MoneroEdit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -19,40 +20,39 @@
             android:imeOptions="actionNext"
             android:inputType="text"
             android:maxLines="1"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/etWalletPassword"
+            style="@style/MoneroEdit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/generate_password_hint"
             android:imeOptions="actionNext"
             android:inputType="text"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/etWalletMnemonic"
+        style="@style/MoneroEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/generate_mnemonic_hint"
         android:imeOptions="actionNext"
         android:inputType="textMultiLine"
-        android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <EditText
         android:id="@+id/etWalletAddress"
+        style="@style/MoneroEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/generate_address_hint"
         android:imeOptions="actionNext"
         android:inputType="textMultiLine"
-        android:textAlignment="center"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <LinearLayout
         android:id="@+id/llRestoreKeys"
@@ -64,43 +64,43 @@
 
         <EditText
             android:id="@+id/etWalletViewKey"
+            style="@style/MoneroEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/generate_viewkey_hint"
             android:imeOptions="actionNext"
             android:inputType="textMultiLine"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/etWalletSpendKey"
+            style="@style/MoneroEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/generate_spendkey_hint"
             android:imeOptions="actionNext"
             android:inputType="textMultiLine"
-            android:textAlignment="center"
-            android:textSize="16sp" />
+            android:textAlignment="center"/>
     </LinearLayout>
 
     <EditText
         android:id="@+id/etWalletRestoreHeight"
+        style="@style/MoneroEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/generate_restoreheight_hint"
         android:imeOptions="actionDone"
         android:inputType="number"
         android:textAlignment="center"
-        android:textSize="16sp"
         android:visibility="gone" />
 
     <Button
         android:id="@+id/bGenerate"
+        style="@style/MoneroButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
         android:enabled="false"
         android:text="@string/generate_buttonGenerate" />
 
