--- a/app/src/main/res/layout/gen_review_fragment.xml
+++ b/app/src/main/res/layout/gen_review_fragment.xml
@@ -20,23 +20,21 @@
 
         <TextView
             android:id="@+id/tvWalletLabel"
+            style="@style/MoneroLabel"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/generate_wallet_label"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tvWalletPasswordLabel"
+            style="@style/MoneroLabel"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/generate_password_label"
-            android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
     </LinearLayout>
 
     <LinearLayout
@@ -48,106 +46,96 @@
 
         <TextView
             android:id="@+id/tvWalletName"
+            style="@style/MoneroText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tvWalletPassword"
+            style="@style/MoneroText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="***"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="16sp" />
+            android:textAlignment="center" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/tvWalletMnemonicLabel"
+        style="@style/MoneroLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/generate_mnemonic_label"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tvWalletMnemonic"
+        style="@style/MoneroText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tvWalletAddressLabel"
+        style="@style/MoneroLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/generate_address_label"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tvWalletAddress"
+        style="@style/MoneroText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:selectAllOnFocus="true"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textIsSelectable="true" />
 
     <TextView
         android:id="@+id/tvWalletViewKeyLabel"
+        style="@style/MoneroLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/generate_viewkey_label"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tvWalletViewKey"
+        style="@style/MoneroText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:selectAllOnFocus="true"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textIsSelectable="true" />
 
     <TextView
         android:id="@+id/tvWalletSpendKeyLabel"
+        style="@style/MoneroLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/generate_spendkey_label"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="16sp" />
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/tvWalletSpendKey"
+        style="@style/MoneroText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textIsSelectable="true"
-        android:textSize="16sp" />
+        android:textIsSelectable="true" />
 
     <Button
         android:id="@+id/bAccept"
+        style="@style/MoneroButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@color/colorPrimary"
         android:text="@string/generate_button_accept"
         android:visibility="gone" />
 </LinearLayout>
