--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -17,13 +17,13 @@
             android:textOff="@string/connect_testnet"
             android:textOn="@string/connect_mainnet"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/etDaemonAddress"
+            style="@style/MoneroEdit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -33,7 +33,6 @@
             android:inputType="textWebEmailAddress|textNoSuggestions"
             android:maxLines="1"
             android:textIsSelectable="true"
-            android:textSize="15sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tbMainNet"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/tbMainNet" />
@@ -46,9 +45,10 @@
 
         <ListView
             android:id="@+id/list"
+            style="@style/MoneroListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"/>
+            android:layout_marginTop="4dp" />
 
         <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fabAdd"
