--- a/app/src/main/res/layout/prompt_rename.xml
+++ b/app/src/main/res/layout/prompt_rename.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/tvRenameLabel"
+        style="@style/MoneroLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/prompt_rename"
@@ -16,6 +17,7 @@
 
     <EditText
         android:id="@+id/etRename"
+        style="@style/MoneroEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="normal"
