--- a/app/src/main/res/layout/send_fragment.xml
+++ b/app/src/main/res/layout/send_fragment.xml
@@ -5,17 +5,19 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginBottom="8sp"
             android:weightSum="2">
 
             <Spinner
                 android:id="@+id/sMixin"
+                style="@style/MoneroSpinner"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -24,6 +26,7 @@
 
             <Spinner
                 android:id="@+id/sPriority"
+                style="@style/MoneroSpinner"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -35,92 +38,90 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginBottom="4sp"
             android:layout_marginTop="4sp"
+            android:orientation="horizontal"
             android:weightSum="10">
 
             <EditText
                 android:id="@+id/etAddress"
+                style="@style/MoneroEdit"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:hint="@string/send_address_hint"
                 android:imeOptions="actionNext"
                 android:inputType="textMultiLine"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textAlignment="center" />
 
             <Button
                 android:id="@+id/bScan"
+                style="@style/MoneroButton.Small"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:minHeight="36sp"
                 android:layout_weight="2"
-                android:background="@color/colorPrimary"
                 android:enabled="true"
-                android:text="@string/send_qr_hint"
-                android:textSize="12sp" />
+                android:minHeight="36sp"
+                android:text="@string/send_qr_hint" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginBottom="4sp"
             android:layout_marginTop="4sp"
+            android:orientation="horizontal"
             android:weightSum="10">
 
             <EditText
                 android:id="@+id/etPaymentId"
+                style="@style/MoneroEdit"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:hint="@string/send_paymentid_hint"
                 android:imeOptions="actionNext"
                 android:inputType="textMultiLine"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textAlignment="center" />
 
             <Button
                 android:id="@+id/bPaymentId"
+                style="@style/MoneroButton.Small"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:minHeight="36sp"
                 android:layout_weight="2"
-                android:background="@color/colorPrimary"
                 android:enabled="true"
-                android:text="@string/send_generate_paymentid_hint"
-                android:textSize="12sp" />
+                android:minHeight="36sp"
+                android:text="@string/send_generate_paymentid_hint" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginBottom="4sp"
             android:layout_marginTop="4sp"
+            android:orientation="horizontal"
             android:weightSum="10">
 
             <EditText
                 android:id="@+id/etAmount"
+                style="@style/MoneroEdit"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
                 android:hint="@string/send_amount_hint"
                 android:imeOptions="actionDone"
                 android:inputType="numberDecimal"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textAlignment="center" />
 
             <Button
                 android:id="@+id/bSweep"
+                style="@style/MoneroButton"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:background="@color/colorPrimary"
                 android:enabled="true"
                 android:text="@string/send_sweep_hint"
                 android:visibility="invisible" />
@@ -128,18 +129,18 @@
 
         <Button
             android:id="@+id/bPrepareSend"
+            style="@style/MoneroButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4sp"
             android:layout_marginTop="4sp"
-            android:minHeight="36sp"
-            android:background="@color/colorPrimary"
             android:enabled="false"
+            android:minHeight="36sp"
             android:text="@string/send_prepare_hint" />
 
         <ProgressBar
             android:id="@+id/pbProgress"
-            style="@android:style/Widget.ProgressBar.Horizontal"
+            style="@style/MoneroProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone" />
@@ -148,18 +149,18 @@
             android:id="@+id/llConfirmSend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="4sp"
             android:layout_marginTop="4sp"
+            android:orientation="vertical"
             android:visibility="gone">
 
             <Button
                 android:id="@+id/bDispose"
+                style="@style/MoneroButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="36sp"
                 android:layout_marginBottom="4sp"
-                android:background="@color/colorPrimary"
+                android:minHeight="36sp"
                 android:text="@string/send_dispose_hint" />
 
             <LinearLayout
@@ -170,23 +171,22 @@
 
                 <TextView
                     android:id="@+id/tvTxAmountLabel"
+                    style="@style/MoneroLabel"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8sp"
                     android:layout_weight="1"
                     android:text="@string/send_amount_label"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
 
                 <TextView
                     android:id="@+id/tvTxAmount"
+                    style="@style/MoneroText"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8sp"
                     android:layout_weight="2"
-                    android:textAlignment="textEnd"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
             </LinearLayout>
 
             <LinearLayout
@@ -197,23 +197,22 @@
 
                 <TextView
                     android:id="@+id/tvTxFeeLabel"
+                    style="@style/MoneroLabel"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="4sp"
                     android:layout_weight="1"
                     android:text="@string/send_fee_label"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
 
                 <TextView
                     android:id="@+id/tvTxFee"
+                    style="@style/MoneroText"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8sp"
                     android:layout_weight="2"
-                    android:textAlignment="textEnd"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
             </LinearLayout>
 
             <LinearLayout
@@ -224,53 +223,52 @@
 
                 <TextView
                     android:id="@+id/tvTxDustLabel"
+                    style="@style/MoneroLabel"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8sp"
                     android:layout_weight="1"
                     android:text="@string/send_dust_label"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
 
                 <TextView
                     android:id="@+id/tvTxDust"
+                    style="@style/MoneroText"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8sp"
                     android:layout_weight="2"
-                    android:textAlignment="textEnd"
-                    android:textSize="20sp" />
+                    android:textAlignment="textEnd" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/etNotes"
+                style="@style/MoneroEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4sp"
                 android:hint="@string/send_notes_hint"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
-                android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textAlignment="center" />
 
             <Button
                 android:id="@+id/bSend"
+                style="@style/MoneroButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4sp"
                 android:layout_marginTop="4sp"
                 android:minHeight="36sp"
-                android:background="@color/colorPrimary"
                 android:text="@string/send_send_hint" />
 
             <Button
                 android:id="@+id/bReallySend"
+                style="@style/MoneroButton.Alert"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4sp"
                 android:layout_marginTop="4sp"
-                android:background="@color/moneroOrange"
                 android:text="@string/send_really_send_hint"
                 android:visibility="gone" />
         </LinearLayout>
