--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -1,80 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="1sp"
-    app:cardBackgroundColor="@color/main_background">
+    android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8sp"
-        android:layout_marginTop="8sp"
-        tools:layout_editor_absoluteX="0sp"
-        tools:layout_editor_absoluteY="0sp">
+        android:background="@color/moneroBlack"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-        <TextView
-            android:id="@+id/tx_amount"
-            android:layout_width="60sp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:text="9999999"
-            android:textColor="@android:color/holo_red_light"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <TextView
-            android:id="@+id/tx_amount_point"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tx_amount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="9999999.99999"
+                android:textColor="@color/moneroOrange"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tx_datetime"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="2017-05-22 21:32"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:text="."
-            android:textColor="@android:color/holo_red_light"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
-            app:layout_constraintLeft_toRightOf="@+id/tx_amount"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <TextView
-            android:id="@+id/tx_amount_decimal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="99999"
-            android:textColor="@android:color/holo_red_light"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
-            app:layout_constraintLeft_toRightOf="@+id/tx_amount_point"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tx_fee"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="9999999.99999"
+                android:textColor="@color/moneroOrange"
+                android:textSize="16dp" />
 
-        <TextView
-            android:id="@+id/tx_paymentid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8sp"
-            android:textSize="13sp"
-            android:text="0123456789abcdef"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
-            app:layout_constraintRight_toLeftOf="@+id/tx_datetime"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/tx_paymentid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="0123456789abcdef"
+                android:textColor="@color/textColorPrimary"
+                android:textSize="16dp" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/tx_datetime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="2017-05-22 21:32"
-            android:textColor="@android:color/black"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tx_amount"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </android.support.constraint.ConstraintLayout>
-
+    </LinearLayout>
 </android.support.v7.widget.CardView>
